--- a/index.html
+++ b/index.html
@@ -7,5 +7,52 @@
     <link rel="stylesheet" href="./resources/css/style.css" />
     <title>Maradonna Tribute</title>
   </head>
-  <body></body>
+  <body>
+    <main id="main">
+      <header>
+        <h1 id="title">Diego Maradonna</h1>
+        <p>The man that rocked the green pitch</p>
+      </header>
+
+      <figure id="img-div">
+        <img
+          id="image"
+          src="https://images.livemint.com/img/2020/11/25/1140x641/GettyImages-1064052248_(1)_1606332637398_1606332652348.jpg"
+          alt="Diego Maradona holding world cup"
+        />
+        <figcaption id="img-caption">
+          Diego Maradonna holding the 1986 World cup
+        </figcaption>
+      </figure>
+
+      <section id="tribute-info">
+        <h2>Here's a time line of Maradona's life:</h2>
+
+        <div class="grid-container">
+          <div class="item">
+            <p class="head bold">Palmares</p>
+            <p class="years bold">Years</p>
+            <p class="team bold">Team</p>
+            <p class="goals bold">Goals</p>
+            <p class="apps bold">Apps</p>
+            <p class="first">1976–1981</p>
+            <p class="second">Argentinos Juniors</p>
+            <p class="third">116</p>
+            <p class="fourth">166</p>
+            <p class="fifth">1982–1984</p>
+            <p class="sixth">FC Barcelona</p>
+            <p class="seventh">36</p>
+            <p class="eigth">22</p>
+            <p class="nineth">1984–1991</p>
+            <p class="tenth">Napoli</p>
+            <p class="eleventh">81</p>
+            <p class="twelvth">188</p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <a id="tribute-link" href="#">For more information on Diego Maradonna</a>
+    </footer>
+  </body>
 </html>
