Link to wiki page footer

--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
       </section>
     </main>
     <footer>
-      <a id="tribute-link" href="#">For more information on Diego Maradonna</a>
+      <a
+        id="tribute-link"
+        href="https://en.wikipedia.org/wiki/Diego_Maradona"
+        target="_blank"
+        >For more information on Diego Maradonna</a
+      >
     </footer>
   </body>
 </html>
